# Nuke-Template-Manager

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  main.py  menu.py  pyproject.toml  scanner.py  settings.py  templatemanager.json  ui.py
.github/workflows/: release.yml
Template_Manager/: __init__.py  main.py  menu.py  scanner.py  settings.py  ui.py
source/: Template_Manager.rst  conf.py  index.rst  modules.rst  requirements.txt
typings/nuke/: __init__.pyi  cli.pyi  dirtree.pyi  nuke.pyi  utils.pyi
