[project]
name = "nuke-template-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.14.14",
    "nuke>=2.6.2",
    "PySide6>=6.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "python-semantic-release>=10.5.3",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-jquery>=4.1",
    "numpydoc>=1.10.0",
]

[tool.semantic_release]
version_variables = ["Template_Manager/__init__.py:__version__"]

branches.main.match = "(main|master)"

upload_to_pypi = false
upload_to_release = true
build_command = ""